# Nooht-by-MG

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/: ARCHITECTURE.md  CONTRIBUTING.md  SECURITY.md
api-document/: API_REFERENCE.md  ARCHITECTURE.md  BACKEND_GUIDE.md  QUICKSTART.md  SUMMARY_REPORT.md  summary_report.md
nooht/: __init__.py
nooht/adapters/: __init__.py  base.py
nooht/compression/: __init__.py  hmc.py
nooht/context/: __init__.py  manager.py
nooht/core/: __init__.py
nooht/memory/: __init__.py  backend.py  symbol_entity.py  symbol_memory.py  vector_store.py
nooht/retrieval/: __init__.py  retriever.py
nooht/scheduler/: scheduler_interface.py
nooht/semantic/: __init__.py  scm.py
tests/: __init__.py  test_backend.py  test_context.py  test_hmc.py  test_retriever.py  test_scm.py  test_symbol_memory.py
