[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nooht"
version = "0.1.3"
description = "Model-agnostic code intelligence memory engine"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Nooht Team"}
]

[project.optional-dependencies]
transformers = ["transformers>=4.30.0", "torch>=2.0.0"]
faiss = ["faiss-cpu>=1.7.0"]
all = ["transformers>=4.30.0", "torch>=2.0.0", "faiss-cpu>=1.7.0"]

[project.urls]
Homepage = "https://github.com/MG-feng/Nooht-by-MG"
